--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Home | LIYU</title>
   <link rel="shortcut icon" href="favicon.ico"><link href="css/vendors~app.f7fdb172a3af2738a8a6.css?f38a8ef25deb84778db7" rel="stylesheet"><link href="css/app.5663cc4d8e351f46f2a2.css?f38a8ef25deb84778db7" rel="stylesheet"></head>
 
   <body>
